--- a/src/app/components/pages/learning/learning.component.html
+++ b/src/app/components/pages/learning/learning.component.html
@@ -1,1 +1,50 @@
-<p>learning works!</p>
+<app-background></app-background>
+<div class="background"><img src="images/learningZone/background.png" alt="background"></div>
+<div class="background"><img src="images/learningZone/StarsBackground.png" alt="background"></div>
+
+<div class="main">
+    <div class="item">
+        <div class="linear-background"></div>
+        <div class="item-background"></div>
+        <img src="images/learningZone/tomate.png" alt="cover" class="item-image">
+        <h3 class="item-text">
+            Toma-Tomate !
+        </h3>
+    </div>
+    <div class="item">
+        <div class="linear-background"></div>
+
+        <div class="item-background"></div>
+        <img src="images/learningZone/banane.png" alt="cover" class="item-image">
+        <h3 class="item-text">
+            Anne la banane
+        </h3>
+    </div>
+    <div class="item">
+        <div class="linear-background"></div>
+
+        <div class="item-background"></div>
+        <img src="images/learningZone/carotte.png" alt="cover" class="item-image">
+        <h3 class="item-text">
+            Caro-Carotte !
+        </h3>
+    </div>
+    <div class="item">
+        <div class="linear-background"></div>
+
+        <div class="item-background"></div>
+        <img src="images/learningZone/brocoli.png" alt="cover" class="item-image">
+        <h3 class="item-text">
+            Le Brocoli !
+        </h3>
+    </div>
+    <div class="item">
+        <div class="linear-background"></div>
+
+        <div class="item-background"></div>
+        <img src="images/learningZone/fraise.png" alt="cover" class="item-image">
+        <h3 class="item-text">
+            La Fraise !
+        </h3>
+    </div>
+</div>
