--- a/src/app/components/pages/home/hero-section/hero-section.component.css
+++ b/src/app/components/pages/home/hero-section/hero-section.component.css
@@ -182,10 +182,10 @@ body {
     will-change: transform;
 }
 
-.play {
+/* .play {
     animation: moveRotateMinus20 4s ease-in-out infinite alternate;
     will-change: transform;
-}
+} */
 
 @keyframes moveRotate20 {
     0% {
