--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,11 @@
+
+:host {
+    --mainFont: 'Baloo 2';
+    --comic: 'Comic Relief';
+      --pink: rgb(255, 0, 55);
+  --orane: rgb(252, 71, 86);
+}
+
 .nav-link-animated {
   position: relative;
   display: inline-block;
@@ -11,9 +19,14 @@
   transition: color 0.3s ease;
   border: 3px solid transparent;
   background-clip: padding-box;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: var(--comic);
 }
 
+.nav-link{
+  border: 0.5px solid #00000063;
+  color: #00000063;
+  /* padding: 10px; */
+}
 .nav-link-animated::before {
   content: '';
   position: absolute;
@@ -98,7 +111,7 @@
 .user-avatar {
   position: relative;
   border: 3px solid #FF006E;
-  padding: 2px;
+  /* padding: 2px; */
   transition: transform 0.3s ease;
   background: #fff;
   cursor: pointer;
@@ -198,4 +211,79 @@
 .logout:hover {
   background-color: rgba(255, 0, 0, 0.322);
 
+}
+
+
+
+/* navbar in phone */
+
+
+.side-menu {
+  position: fixed;
+  top: 0;
+  left: -260px; /* برة الشاشة */
+  width: 260px;
+  height: 100vh;
+  background:linear-gradient(180deg, var(--pink), var(--orane));
+  box-shadow: 2px 0 15px rgba(0,0,0,0.3);
+  padding: 20px;
+  transition: left 0.3s ease;
+  z-index: 2000;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* يخلي العناصر في النص */
+  align-items: center;
+}
+
+.side-menu.open {
+  left: 0; /* يدخل من الجنب */
+}
+
+.side-menu .close-btn {
+  background: none;
+  border: none;
+  font-size: 2rem;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  color: #000000;
+}
+
+.side-menu ul {
+  list-style: none;
+  padding: 0;
+  width: 100%;
+}
+
+.side-menu li {
+  margin: 15px 0;
+  border-radius: 24px;
+  padding: 12px 0;
+  background: rgba(255, 255, 255, 0.479);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  text-align: center;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.side-menu li:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+}
+
+.side-menu a {
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.menu-btn {
+  font-size: 2rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+  margin-left: 30px;
 }
