--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -2,6 +2,10 @@
     <app-background></app-background>
     <app-background></app-background>
 </div>
+<!-- <div class="lines" style="position: absolute; z-index: -1; top: 100vh;">
+    <img class="img-fluid" src="images/learningZone/background.png" alt="lines">
+    <img class="img-fluid" src="images/learningZone/StarsBackground.png" alt="lines">
+</div> -->
 <div style="position: relative; z-index: 10;">
     <div class="animate__animated animate__fadeInDown">
         <app-hero-section></app-hero-section>
