--- a/src/app/components/cards/cards.component.css
+++ b/src/app/components/cards/cards.component.css
@@ -1,7 +1,7 @@
 .games-carousel-container {
   width: 100%;
   max-width: 900px;
-  margin: 1px auto 0;
+  margin: 10px auto 0;
   text-align: center;
 
 }
@@ -63,7 +63,7 @@
   opacity: 0.5;
   z-index: 1;
   border-radius: 24px;
-  /* box-shadow: 0 8px 32px #0002; */
+  box-shadow: 0 8px 32px #0002;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -198,6 +198,7 @@ margin: auto;
   user-select: none;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  margin: 20px 10px;
 }
 
 .list-cards.dragging {
@@ -251,6 +252,7 @@ margin: auto;
 .list-card:hover {
   transform: translateY(-8px) scale(1.02);
   box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+  margin-bottom: 20px;
 }
 
 /* Responsive breakpoints */
